fabric/support/test/tests/noble_ui/inherent_invalid_item.stderr
error: Invalid noble::inherent, expected impl<..> ProvideInherent for Noble<..>
  --> $DIR/inherent_invalid_item.rs:19:2
   |
19 |     impl Foo {}
   |     ^^^^
